--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -27,6 +30,7 @@
         <activity
             android:name=".QuestionActivity"
             android:exported="false" />
+
         <activity
             android:name=".PetInformationActivity"
             android:exported="false" />
@@ -46,5 +50,6 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
 </manifest>
